--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,11 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.33'
 
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.2'
-
+    //Argon2 Hash Algorithm (PasswordEncoder)
+    implementation 'de.mkammerer:argon2-jvm:2.11'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
