--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Gradle 실행 권한 부여
+        run: chmod +x ./gradlew
+
       - name: Gradle 캐시 설정
         uses: actions/cache@v3
         with:
